[package]
name = "my-gtk-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gtk-sample-app"
path = "src/main.rs"

[[bin]]
name = "custom_button"
path = "src/custom_button_example/main.rs"

[[bin]]
name = "g_object"
path = "src/g_object/main.rs"

[[bin]]
name = "eventloop"
path = "src/eventloop/main.rs"

[[bin]]
name = "column_view_datagrid"
path = "src/column_view_datagrid/main.rs"

[[bin]]
name = "mvvm1"
path = "src/mvvm/main.rs"

[dependencies]
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_12"] }
# rustbox = "*" # does not compile for me on Windows
